fixed white space and changed scroll code

--- a/client/sass/modules/_posts.scss
+++ b/client/sass/modules/_posts.scss
@@ -337,7 +337,7 @@
 		width:100%;
 		display:block;
 		height:$grid-unit;
-		background:black(0.075);
+		background:$dark-grey;
 		text-align:center;
 		color:white;
 		line-height:$grid-unit;
